fixed background image so it doesnt look blurred

--- a/css/login.css
+++ b/css/login.css
@@ -10,6 +10,9 @@ body {
    /* Background Image */
    background-image: url(../assets/underwater_rays.jpg);
     background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 
     display: flex;
     justify-content: center;
